# gcp-etl-dbt

./: .gitignore  Makefile  README.md  pyproject.toml
dashboard/: app.py
docs/ingestion/: ingestion.md
docs/tests/: tests.md
ingestion/: bigquery.py  duck.py  models.py  pipeline.py
ingestion/lib/: bigquery.py  duck.py  models.py  pipeline.py
ingestion/tests/: test_models.py
transform/gcp_etl_dbt/: .user.yml  dbt.duckdb  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
transform/gcp_etl_dbt/analyses/: analysis.sql
transform/gcp_etl_dbt/macros/: custom_date_format.sql  format_date_key.sql
transform/gcp_etl_dbt/models/marts/: dim_date.sql  dim_orders.sql  dim_products.sql  dim_users.sql  fact_order_items.sql  mart_average_time_to_ship.sql  mart_customer_demographics.sql  mart_order_status_distribution.sql  mart_revenue_over_time.sql  mart_sales_by_category.sql  mart_sales_by_country.sql  mart_top_customers.sql  mart_top_selling_products.sql  schema.yml
transform/gcp_etl_dbt/models/staging/: sources.yml  stg_distribution_centers.sql  stg_events.sql  stg_inventory_items.sql  stg_order_item.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_users.sql
transform/gct_etl_dbt/: dbt_project.yml
