[tool.poetry]
name = "gcp-etl-dbt"
version = "0.1.0"
description = ""
authors = ["danielmschaves <danielmschaves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
duckdb = "^0.10.2"
fire = "^0.5.0"
google-cloud-bigquery = "^3.13.0"
loguru = "^0.7.2"
google-auth = "^2.24.0"
pydantic = "^2.5.2"
db-dtypes = "^1.1.1"
pandas = "^2.1.3"
pyarrow = "^14.0.2"
google-cloud-bigquery-storage = "^2.24.0"
dbt-duckdb = {version = "1.8.1", extras = ["md"]}
pytest = "^8.2.2"
numpy = "<2.0.0"
black = "^24.4.2"
harlequin = "^1.21.0"
sqlfluff = "^3.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
